--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "flatpickr": "^4.6.1",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.0.0",
     "popper.js": "^1.15.0"
   },
   "devDependencies": {
